crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__function__tests__function_kw_only_args.snap
---
source: crates/ruff_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..23,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..17,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "a",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            parameter: Parameter {
                                range: 12..13,
                                name: Identifier {
                                    id: "b",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 15..16,
                            parameter: Parameter {
                                range: 15..16,
                                name: Identifier {
                                    id: "c",
                                    range: 15..16,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 19..23,
                        },
                    ),
                ],
            },
        ),
    ],
)
