crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__function__tests__function_no_args.snap
---
source: crates/ruff_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..13,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..7,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 9..13,
                        },
                    ),
                ],
            },
        ),
    ],
)
