crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__function__tests__function_pos_args.snap
---
source: crates/ruff_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..20,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..14,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            parameter: Parameter {
                                range: 12..13,
                                name: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 16..20,
                        },
                    ),
                ],
            },
        ),
    ],
)
